[FIX] Homepage: Removed unneeded spacing
* Removed Spacing between content and Navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 #root {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 100vh;
+  height: 100dvh;
   max-width: 100vw;
   margin: 0;
 }
